# omvi-pipes-ai

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  Dockerfile.cloud  LICENSE  README.md  SECURITY.md  cspell.json  docker-compose.yaml  package-lock.json  q
backend/python/: .gitignore  Dockerfile  README.md  clean.sh  env.template  pyproject.toml
backend/python/app/: connectors_main.py  docling_main.py  indexing_main.py  query_main.py
backend/python/app/agents/client/: confluence.py  google.py  http.py  iclient.py  jira.py
backend/python/app/agents/db/: startup.py  tools_db.py
backend/python/app/agents/permissions/: permission.py
backend/python/app/agents/router/: router.py
backend/python/app/agents/tools/: decorator.py  enums.py  executor.py  models.py  registry.py  tools_discovery.py
backend/python/app/api/middlewares/: auth.py
backend/python/app/api/routes/: agent.py  chatbot.py  entity.py  health.py  records.py  search.py
backend/python/app/builders/: records_builder.py
backend/python/app/config/: configuration_service.py  default_config.json  key_value_store.py  key_value_store_factory.py
backend/python/app/config/constants/: ai_models.py  arangodb.py  service.py  store_type.py
backend/python/app/config/encryption/: encryption_service.py
backend/python/app/config/providers/: etcd3_connection_manager.py  etcd3_store.py  in_memory_store.py
backend/python/app/config/utils/: etcd3_backup.py  retry_policy.py
backend/python/app/connectors/: QUICK_START_GUIDE.md  SCALABLE_CONNECTOR_FRAMEWORK.md  SOLID_IMPROVEMENTS.md
backend/python/app/connectors/api/: middleware.py  router.py
backend/python/app/connectors/enums/: enums.py
backend/python/app/connectors/services/: base_arango_service.py  base_redis_service.py  entity_kafka_consumer.py  event_service.py  kafka_service.py  sync_kafka_consumer.py
backend/python/app/connectors/utils/: decorators.py  drive_worker.py  rate_limiter.py
backend/python/app/containers/: connector.py  container.py  docling.py  indexing.py  query.py
backend/python/app/containers/utils/: utils.py
backend/python/app/core/: ai_arango_service.py  celery_app.py  embedding_service.py  llm_service.py  redis_scheduler.py  signed_url.py
backend/python/app/events/: events.py  processor.py
backend/python/app/exceptions/: indexing_exceptions.py
backend/python/app/health/: health.py
backend/python/app/models/: blocks.py  entities.py  file.py  graph.py  permission.py  records.py  users.py
backend/python/app/modules/indexing/: run.py
backend/python/app/services/: ai_config_handler.py  kafka_consumer.py
backend/python/app/setups/: connector_setup.py  indexing_setup.py  query_setup.py
backend/python/app/utils/: aimodels.py  chat_helpers.py  citations.py  datetime_utils.py  jwt.py  llm.py  logger.py  mimetype_to_extension.py  query_decompose.py  streaming.py  time_conversion.py
backend/python/code-generator/: airtable.py  box.py  confluence.py  dropbox.py  dropbox.yaml  dropbox_.py  github.py  gitlab.py  google.py  jira.py  linear.py  microsoft.py  model_generator.py  ms_one_note.py  notion.py  one_drive.py  outlook.py  s3.py  slack.py  utils.py  zendesk.py
backend/python/code-generator/azure_blob/: azure_blob.py  azure_spec.json
backend/python/code-generator/microsoft/: ms_planner.py  ms_sharepoint.py  ms_teams.py  ms_users_groups.py
services/python/: .env.template  .gitignore  Dockerfile  README.md  env.template  pyproject.toml  requirements.txt  todo.txt  token.pickle
services/python/app/: connectors_main.py  indexing_main.py  query_main.py  routes.py  setup.py
services/python/app/builders/: records_builder.py
services/python/app/config/: ai_models_named_constants.py  arangodb_constants.py  configuration_service.py  key_value_store.py  key_value_store_factory.py
services/python/app/core/: ai_arango_service.py  celery_app.py  embedding_service.py  llm_service.py  redis_scheduler.py  rockdb_service.py  signed_url.py
services/python/app/events/: block_prompts.py  events.py  processor.py
services/python/app/exceptions/: connector_google_exceptions.py  embedding_exceptions.py  fastapi_responses.py  indexing_exceptions.py
services/python/app/models/: change.py  file.py  permission.py  records.py
services/python/app/schema/: documents.py  edges.py
services/python/app/scripts/: load_etcd_config.py  services_linux.sh
services/python/app/services/: ai_config_handler.py  kafka_consumer.py  llm_config_handler.py
services/python/app/setups/: connector_setup.py  indexing_setup.py  query_setup.py
services/python/app/tests/: google_download_testing.py  kafka_test_producer.py  testing_sha256.py
services/python/app/utils/: citations.py  embeddings.py  llm.py  logger.py  mimetype_to_extension.py  query_decompose.py  query_transform.py  time_conversion.py
services/python/logs/webhook_headers/: headers_log.json
services/python/schema/arango/: documents.py  edges.py
(+1182 files in other folders)
